Fix horizontal scrolling on mobile

--- a/src/web/client/assets/css/main.scss
+++ b/src/web/client/assets/css/main.scss
@@ -214,8 +214,8 @@ select{
     width: $container-width;
 
     @media (max-width: $mobile-breakpoint) {
-        width: unset;
-        max-width: unset;
+        width: 100%;
+        max-width: 100%;
     }
 }
 
@@ -238,6 +238,15 @@ select{
         @media (max-width: $mobile-breakpoint) {
             grid-template-columns: 100%;
         }
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6{
+        word-break: break-word;
     }
 
     h1{
